--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://akshataThubeNimase.github.io/HindcoAssignment",
   "name": "hindco_assig",
   "version": "0.1.0",
   "private": true,
@@ -16,7 +17,9 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-social-icons": "^6.14.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build" 
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
