--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-social-icons": "^6.14.0",
-    "web-vitals": "^2.1.4",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build" 
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
