--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://akshataThubeNimase.github.io/HindcoAssignment",
+  "homepage": "https://akshataThubeNimase.github.io/HindcoAssignment/home",
   "name": "hindco_assig",
   "version": "0.1.0",
   "private": true,
